name:                twc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/twc#readme
license:             LGPLV3
license-file:        LICENSE
author:              Dante Elrik
maintainer:          dante@github.com
copyright:           2017 Dante Elrik
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable twc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson >= 1.0.2.1
                     , base >= 4.7 && < 5
                     , lens >= 4.15.1
                     , text >= 1.2.2.1
                     , wreq
